--- a/grocery-store-app/app/views/departments/index.html.erb
+++ b/grocery-store-app/app/views/departments/index.html.erb
@@ -13,7 +13,7 @@
    <% if department.store_id != "" %>
     <div class="card card-department col-6" style="width: 18rem;">
       <div class="card-body">
-        <h5 class="card-title"><%= department.name %>, <%= department.store %></h5>
+        <h5 class="card-title"><%= department.name %></h5>
         <p class="card-text"><%= department.description %></p>
         
         
