--- a/grocery-store-app/app/views/layouts/application.html.erb
+++ b/grocery-store-app/app/views/layouts/application.html.erb
@@ -14,6 +14,31 @@
   </head>
 
   <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand"><%= link_to 'Grocery Store App', root_path %></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+          <li class="nav-item active">
+        <a class="nav-link" <%= link_to 'Departments', departments_url %> <span class="sr-only">(current)</span></a>
+      </li>
+          <li class="nav-item active">
+        <a class="nav-link" <%= link_to 'Employees', employees_url %> <span class="sr-only">(current)</span></a>
+      </li>
+          <li class="nav-item active">
+        <a class="nav-link" <%= link_to 'Reviews', reviews_url %> <span class="sr-only">(current)</span></a>
+      </li>
+          <li class="nav-item active">
+        <a class="nav-link" <%= link_to 'Stores', stores_url %> <span class="sr-only">(current)</span></a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
     <%= yield %>
     
 <!-- Optional JavaScript -->
