--- a/grocery-store-app/app/views/employees/_form.html.erb
+++ b/grocery-store-app/app/views/employees/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= f.label :role %>
-    <%= f.text_field :role %>
+    <%= f.text_field :role, placeholder: "Full-time, part-time, or terminated" %>
   </div>
 
   <div class="field">
