--- a/grocery-store-app/app/views/stores/_form.html.erb
+++ b/grocery-store-app/app/views/stores/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= f.label :status %>
-    <%= f.text_field :status %>
+    <%= f.text_field :status, placeholder: "in setup, active, or inactive" %>
   </div>
 
   <div class="field">
