--- a/fluud-app/app/views/homes/index.html.erb
+++ b/fluud-app/app/views/homes/index.html.erb
@@ -1,3 +1,4 @@
+<!--- Code made by Team Anime from MIS 4397. Please do not steal --->
 <!--- <!DOCTYPE html>
 <html>
   <head>
@@ -33,12 +34,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
-
     <!--- NavBar --->
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -54,25 +49,26 @@
           <li class="nav-item">
             <a class="nav-link" href="maps.html">Flood Threat Map</a>
           </li>
-          <!--- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li> --->
           <li class="nav-item">
             <a class="nav-link" href="prepareds.html">Being Prepared</a>
           </li>
         </ul>
+        
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <% if user_devise_signed_in? %>
+            Logged in as <strong><%= current_user.email %></strong>.
+            <%= link_to 'Edit profile', edit_user_registration_path %> |
+            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+            <% else %>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            <%= link_to "Sign up", new_user_devise_registration_path %>
+          </button>&nbsp&nbsp
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            <%= link_to "Login", new_user_devise_session_path %>
+          </button>
+        <% end %>
         </form>
+        
       </div>
     </nav>
     <!--- Carousel --->
@@ -117,56 +113,104 @@
     <!--- Title Bar --->
     <div class="jumbotron">
       <h1 style= "margin: 0 10% 0 10%">Welcome to Fluud Forecasting</h1>      
-      <p style= "margin: 0 10% 0 10%">Created by a group of amateur web developers, Fluud aims to provide relevant weather foreacting data to the local Houston area and create a site to help residents prepare for the future.</p>
+      <p style= "margin: 0 10% 0 10%">Created by a group of amateur web developers known as Team Anime, Fluud aims to provide relevant weather foreacting data to the local Houston area while creating a site to help residents prepare for the future.</p>
     </div>
     <div class="container">
       <!--- <p>This is some text.</p>      
       <p>This is another text.</p> --->     
     </div>
-    <!--- Body Text --->
-    <div class="body-text" style= "width: 80%; margin: 15px 10% 15px 10%"> 
-      <img src="https://i.pinimg.com/originals/7e/2b/69/7e2b69d5787851837eb0df14dccd9b80.jpg" height="35%" width="35%"  alt="Image" style="float: left; margin: 3px 12px 3px 12px; border: 1px solid #000000;">
+  
+    <div class="row" style="margin: 0 10% 10px 10%">
+      <!--- First column --->
+      <div class="col-sm-8">
+        <div class="card" style="margin:0 0 10px 0">
+          <div class="card-body">
+            <h4 class="card-title">BREAKING NEWS <br> Hurricane Watch near Florida</h5>
+            
+            <!--- code for autoplay video --->
+            <!--- <video class="img-fluid" playsinline autoplay muted loop style="border-radius: 10px;">
+            <source src="https://mdbootstrap.com/img/video/animation-intro.mp4" type="video/mp4">
+            </video> --->
 
-      <p>
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-      </p>
+            <div class='ResponsiveYTPlayer' playsinline autoplay muted loop style="border-radius: 10px;">
+              <iframe class="youtube-player" id="player" type="text/html" src="https://www.youtube.com/embed/Z2_e724Q2H4?controls=0&autoplay=1&mute=1" frameborder="0" muted="muted">
+              </iframe>
+            </div>
+            <br><br><br>
+            <p class="card-text">Below you will find some helpful links to articles regarding Hurricane Eta.</p>
+            <div class="row" style="margin:0 0 10px 0">
+              <div class="card-article sm-1">
+                <img src="https://www.mynews13.com/content/dam/News/2020/11/11/Tropical-Storm-ETA-1920x1080-generic-full-slate.jpg/jcr:content/renditions/cq5dam.thumbnail.767.431.margin.png" class="card-img-top" alt="...">
+                <p> Hurricane Eta Approaches Florida with Record Winds </p>
+                <div class="card-body">
+                  <a href="https://www.scientificamerican.com/article/record-breaking-tropical-storm-eta-drenches-florida/" class="btn btn-primary">Read More</a>  
+                </div>
+              </div>
+              <div class="card-article sm-3">
+                <img src="https://www.mynews13.com/content/dam/News/2020/11/11/Tropical-Storm-ETA-1920x1080-generic-full-slate.jpg/jcr:content/renditions/cq5dam.thumbnail.767.431.margin.png" class="card-img-top" alt="...">
+                <p> Hurricane Eta Approaches Florida with Record Winds </p>
+                <div class="card-body">
+                  <a href="https://www.scientificamerican.com/article/record-breaking-tropical-storm-eta-drenches-florida/" class="btn btn-primary">Read More</a>  
+                </div>
+              </div>
+              <div class="card-article sm-3">
+                <img src="https://www.mynews13.com/content/dam/News/2020/11/11/Tropical-Storm-ETA-1920x1080-generic-full-slate.jpg/jcr:content/renditions/cq5dam.thumbnail.767.431.margin.png" class="card-img-top" alt="...">
+                <p> Hurricane Eta Approaches Florida with Record Winds </p>
+                <div class="card-body">
+                  <a href="https://www.scientificamerican.com/article/record-breaking-tropical-storm-eta-drenches-florida/" class="btn btn-primary">Read More</a>  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card" style="margin:0 0 10px 0">
+          <div class="card-body">
+            <h5 class="card-title">LATEST NEWS </h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <!--- Second column --->
+      <div class="col-sm-4">
+        <div class="card" style="margin:0 0 10px 0">
+          <div class="card-body">
+            <h5 class="card-title">Current Weather in Houston</h5>
+            <p class="card-text">Check out live info on how your week will be and plan accordingly!</p>
+            <div class="container" src="api.openweathermap.org/data/2.5/weather?q={city name}&appid={216fbe873bd35db66bea3d9c9ff0d6b8}">
+            </div>
+            <a href="weather.html" class="btn btn-primary">See More</a>
+          </div>
+        </div>
+        <div class="card" style="margin:0 0 10px 0">
+          <div class="card-body" >
+            <h5 class="card-title">Donate to a Local Flood Relief</h5>
+            <p class="card-text">Support your Houston neighbors affected by flooding from Hurricane Harvey and other disasters.</p>
+            <!--- three icons --->
+            <div class="charity-icon" style="margin:0 0 15px 0">
+            <a href="https://www.houstonfoodbank.org/">
+              <img class="rounded-circle" alt="100x100" src="https://yt3.ggpht.com/a/AATXAJyYFhSD-kbR72obcKeSFFDNebWT36lJ9PgHcS9c=s900-c-k-c0x00ffffff-no-rj" data-holder-rendered="true">
+                <div class="middle">
+                  <div class="text1"> Houston Food Bank </div>
+                </div>
+            </a>  
+            <a href="https://www.redcross.org/local/texas/gulf-coast/about-us/locations/houston.html"> 
+              <img class="rounded-circle" alt="100x100" src="https://lofrev.net/wp-content/photos/2016/06/red_cross_logo.png" data-holder-rendered="true">
+            </a>
+            <a href="https://www.houstonspca.org/">
+              <img class="rounded-circle" alt="100x100" src="https://pbs.twimg.com/profile_images/1033066641104326657/HQLVnQXh_400x400.jpg" data-holder-rendered="true">
+            </a>
+          </div>
+          <a href="/homes/donate.html">Donate</a>
+          <!---<a href="donate.html" class="btn btn-primary">List of Charities</a>
+           --->
+          </div>
+        </div>
+      </div>
     </div>
-    <br><br>
-    <div class="body-text2" style= "width: 80%; margin: 15px 10% 15px 10%"> 
-      <img src="https://i.pinimg.com/originals/7e/2b/69/7e2b69d5787851837eb0df14dccd9b80.jpg" height="35%" width="35%"  alt="Image" style="float: right; margin: 3px 12px 3px 12px; border: 1px solid #000000;">
 
-      <p>
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-      </p>
-    </div> 
-    <br><br>
-    <div class="body-text3" style= "width: 80%; margin: 15px 10% 15px 10%"> 
-      <img src="https://i.pinimg.com/originals/7e/2b/69/7e2b69d5787851837eb0df14dccd9b80.jpg" height="55%" width="55%"  alt="Image" style="float: left; margin: 3px 12px 3px 12px; border: 1px solid #000000;">
+    
 
-      <h3>
-        Some things to worry about
-      </h3>
-      <li>
-        Something
-      </li>
-      <li>
-        Something else
-      </li>
-      <li>
-        Something else else to worry about
-      </li>
-
-      <br><br><br>
-      <p>
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-      
-      </p>
-    </div>
   </body>
 
   <!--- <footer class="footer">
