--- a/fluud-app/app/views/layouts/application.html.erb
+++ b/fluud-app/app/views/layouts/application.html.erb
@@ -11,6 +11,32 @@
   </head>
 
   <body>
-    <%= yield %>
+    <!--- <div id ="container">
+      <div id="user_nav">
+        <% if user_devise_signed_in? %>
+          Logged in as <strong><%= current_user.email %></strong>.
+          <%= link_to 'Edit profile', edit_user_registration_path %> |
+          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "Sign up", new_user_devise_registration_path %> |
+          <%= link_to "Login", new_user_devise_session_path %>
+        <% end %>
+      </div>  --->
+        <!--- code for devise --->
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+        <!--- OAuth Devise --->
+        <% if notice %>
+          <p class="alert alert-success"><%= notice %></p>
+        <% end %>
+        <% if alert %>
+          <p class="alert alert-danger"><%= alert %></p>
+        <% end %>
+        
+        <%= yield %>
+        
+        
+      
+    #</div>
   </body>
 </html>
