--- a/fluud-app/app/views/prepareds/index.html.erb
+++ b/fluud-app/app/views/prepareds/index.html.erb
@@ -1,139 +1,171 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Fluud Ready</title>
-  </head>
-  <body>
-    <!-- Optional JavaScript; choose one of the two! -->
+	<title>Flood directory</title>
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+	<!-- Bootstrap -->
+	<link href="style.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	 crossorigin="anonymous">
+   
+	<!-- Optional theme -->
+	<!---<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+	 crossorigin="anonymous"> -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  
+  <!--- scripts --->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  
+</head>
 
-
-    <!--- NavBar --->
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-primary">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="homes.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="maps.html">Flood Threat Map</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="prepareds.html">Being Prepared<span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+<body>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a id= "logo" href="#">
+          <img src="https://images.squarespace-cdn.com/content/v1/575a6067b654f9b902f452f4/1552683653140-0UUVQSSUEWVC73AWAEQG/ke17ZwdGBToddI8pDm48kP06O0_IHyRXSOOiqwgWaApZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVEsL0EX72Q6S7TgfQYQBQpkz5xM6Qt8VXd_xJGg_ziCFib8BodarTVrzIWCp72ioWw/300Logo.png?format=500w" />
+          </a>
+           
+      </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="homes.html">Home</a></li>
+            <li><a href="maps.html">Map</a></li>
+            <li class = "active"><a href="prepareds.html">Being Prepared</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </nav>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-    <!--- Quote from a big boi --->
-    <div class="card">
-      <!--- <div class="card-header">
-        Quote
-      </div> --->
-      <div class="card-body" style="margin: 15px 10% 15px 10%">
-        <blockquote class="blockquote mb-0">
-          <b><h2>“By failing to prepare, you are preparing to fail.”</h2></b>
-          <footer class="blockquote-footer"><cite title="Source Title">Benjamin Franklin</cite></footer>
-        </blockquote>
+<!--- code starts here for body of page--->
+<div class = "prepared-top-segment" style="top:150px">
+  <center><h2><br>"By failing to prepare, you are preparing to fail." </h2></center>
+  <center><h4>"- Benjamin Franklin"</h4></center>
+</div>
+<!--- Info Cards --->
+
+<div class="container">
+  
+  <!--- <p>The .thumbnail class can be used to display an image gallery.</p>
+  <p>The .caption class adds proper padding and a dark grey color to text inside thumbnails.</p>
+  <p>Click on the images to enlarge them.</p> --->
+  <div class="row">
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bangkokpost.com%2Fworld%2F1972727%2Ffloods-test-limits-of-three-gorges-dam&psig=AOvVaw1Lewrw7HdLEwGLVENPZade&ust=1603866519703000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPDe1s6S1OwCFQAAAAAdAAAAABAE">
+          <img src="https://amnaqvibucket.s3.us-east-2.amazonaws.com/assets/img/glenn-carstens-peters-RLw-UC03Gwc-unsplash.jpg" style: width=100%>
+        </a>  
+          <div class="caption">
+            <h1 style="font-size:31px;text-align: center">Make a Plan</h1>
+            <p style="text-align:center">Map out the steps you'll take ahead of time. Learn more about devising the plan that's right for you, and make an emergency less stressful.</p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a style="text-align:center"href="https://app-template.mskhann.repl.co/prepare-info.html#build-a-kit" class="btn btn-primary">Read more</a>
+          </div>
+        
       </div>
     </div>
-    <!--- Cards Section --->
-    <center><div class="card-columns" style="margin: 15px 10% 15px 10%; margin-top:50px;">
-      <div class="card">
-        <img class="card-img-top" src="https://www.tempestrestoration.co.uk/static/gfx/flood-alert.svg " alt="Card image cap">
-        <div class="card-body">
-          <a href="https://www.nssl.noaa.gov/education/svrwx101/floods/">
-          <h5 class="card-title">Severe Weather 101</h5>
-          </a>
-          <p class="card-text">Stay up-to-date with safety procedures and what to do in the case of a natural disaster with these basic safety guides.</p>
-        </div>
-      </div>
-      <div class="card p-3">
-        <blockquote class="blockquote mb-0 card-body">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer class="blockquote-footer">
-            <small class="text-muted">
-              Someone famous in <cite title="Source Title">Source Title</cite>
-            </small>
-          </footer>
-        </blockquote>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="https://media.wired.com/photos/5ba2d8b75ebcb55c2e349768/16:9/w_2400,h_1350,c_limit/emergencykit-155597266.jpg" alt="Card image cap">
-        <div class="card-body">
-          <a href="https://www.ready.gov/kit">
-          <h5 class="card-title">Build A Bug Out Bag</h5>
-          </a>
-          <p class="card-text">Natural disasters are unpredictable, so it si imperative to prepare for the worst and create basic disaster kit in case of emergencies.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
-      <div class="card bg-primary text-white text-center p-3">
-        <blockquote class="blockquote mb-0">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-          <footer class="blockquote-footer">
-            <small>
-              Someone famous in <cite title="Source Title">Source Title</cite>
-            </small>
-          </footer>
-        </blockquote>
-      </div>
-      <div class="card text-center">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img" src="https://www.globalsecurity.org/military/facility/images/houston-cat4.jpg" alt="Card image">
-      </div>
-      <div class="card p-3 text-right">
-        <blockquote class="blockquote mb-0">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer class="blockquote-footer">
-            <small class="text-muted">
-              Someone famous in <cite title="Source Title">Source Title</cite>
-            </small>
-          </footer>
-        </blockquote>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bangkokpost.com%2Fworld%2F1972727%2Ffloods-test-limits-of-three-gorges-dam&psig=AOvVaw1Lewrw7HdLEwGLVENPZade&ust=1603866519703000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPDe1s6S1OwCFQAAAAAdAAAAABAE">
+          <img src="https://amnaqvibucket.s3.us-east-2.amazonaws.com/assets/img/red-cross-158454_1280.png" alt="Lights" style: width=80% >
+        </a>  
+          <div class="caption">
+            <h1 style="text-align:center;font-size:31px">Build an Emergency Kit</h1>
+            <p style="text-align:center">Before disaster strikes, having a kit prepared for different scenarios can be highly beneficial. Learn more about what you need, no matter the situation.</p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://app-template.mskhann.repl.co/prepare-info.html#make-a-plan" class="btn btn-primary">Read more</a>
+          </div>
+        
       </div>
     </div>
-    </center>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bangkokpost.com%2Fworld%2F1972727%2Ffloods-test-limits-of-three-gorges-dam&psig=AOvVaw1Lewrw7HdLEwGLVENPZade&ust=1603866519703000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPDe1s6S1OwCFQAAAAAdAAAAABAE">
+          <img src="https://amnaqvibucket.s3.us-east-2.amazonaws.com/assets/img/ray-sangga-kusuma-7uSrOyY1U0I-unsplash.jpg" alt="Lights" style="width:100%">
+        </a>  
+          <div class="caption">
+            <h1 style="text-align:center;font-size:31px">Get Involved</h1>
+            <p style="text-align:center">Volunteer organizations are often instrumental in the response to natural disasters. Learn more about the ways they help and get involved.</p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://app-template.mskhann.repl.co/prepare-info.html#stay-informed" class="btn btn-primary">Read more</a>
+          </div>
+        
+      </div>
+    </div>
     
-  </body>
 
-  <!--- footer --->
-  <div class="footer-margin">
-      <footer class="card-footer bg-light footer-font-style text-muted footer-position">
-        <div class="footer-copyright text-center py-3">© 2020 Copyright: MIS 4398 Adv WebDev
-        </div>
-      </footer>
+    
+    
+    
   </div>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bangkokpost.com%2Fworld%2F1972727%2Ffloods-test-limits-of-three-gorges-dam&psig=AOvVaw1Lewrw7HdLEwGLVENPZade&ust=1603866519703000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPDe1s6S1OwCFQAAAAAdAAAAABAE">
+          <img src="https://amnaqvibucket.s3.us-east-2.amazonaws.com/assets/img/houses-5188152_1280.png" alt="Lights" style="width:95%">
+        </a>  
+          <div class="caption">
+            <h1 style="text-align:center;font-size:31px">Know Your Neighbors</h1>
+            <p> 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://app-template.mskhann.repl.co/prepare-info.html#know-your-neighbors" class="btn btn-primary">Read more</a>
+          </div>
+        
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bangkokpost.com%2Fworld%2F1972727%2Ffloods-test-limits-of-three-gorges-dam&psig=AOvVaw1Lewrw7HdLEwGLVENPZade&ust=1603866519703000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPDe1s6S1OwCFQAAAAAdAAAAABAE">
+          <img src="https://amnaqvibucket.s3.us-east-2.amazonaws.com/assets/img/news-5183354_1280.png" alt="Lights" style="width:90%">
+        </a>  
+          <div class="caption">
+            <h1 style="text-align:center;font-size:31px">Stay Informed</h1>
+            <p style="text-align:center">Staying informed helps you keep track of emergencies as they happen. Learn more about the many ways you can keep up to date. 
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>
+            <a href="https://app-template.mskhann.repl.co/prepare-info.html#stay-informed" class="btn btn-primary">Read more</a>
+          </div>
+        
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bangkokpost.com%2Fworld%2F1972727%2Ffloods-test-limits-of-three-gorges-dam&psig=AOvVaw1Lewrw7HdLEwGLVENPZade&ust=1603866519703000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPDe1s6S1OwCFQAAAAAdAAAAABAE">
+          <img src="https://amnaqvibucket.s3.us-east-2.amazonaws.com/assets/img/brett-jordan-PFr50OBMowU-unsplash.jpg" alt="Lights" style="width:90%">
+        </a>  
+          <div class="caption">
+            <h1 style="text-align:center;font-size:31px">After the Storm</h1>
+            <p style="text-align:center">A flood can cause extensive damage to a home, depending on the amount of water that gets in. Learn more about what you must consider in the aftermath.</p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://app-template.mskhann.repl.co/prepare-info.html#stay-informed" class="btn btn-primary">Read more</a>
+          </div>
+        
+      </div>
+    </div>
+    
+
+    
+    
+</div>
+
+
+
+
+
+</body>
 </html>
