--- a/fluud-app/app/views/layouts/application.html.erb
+++ b/fluud-app/app/views/layouts/application.html.erb
@@ -1,30 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>FluudApp</title>
-    <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    
-    
-  </head>
-
-  <body>
     <!--- <div id ="container">
       <div id="user_nav">
-        <% if user_devise_signed_in? %>
+        <% if user_signed_in? %>
           Logged in as <strong><%= current_user.email %></strong>.
           <%= link_to 'Edit profile', edit_user_registration_path %> |
           <%= link_to "Logout", destroy_user_session_path, method: :delete %>
         <% else %>
-          <%= link_to "Sign up", new_user_devise_registration_path %> |
-          <%= link_to "Login", new_user_devise_session_path %>
+          <%= link_to "Sign up", new_user_registration_path %> |
+          <%= link_to "Login", new_user_session_path %>
         <% end %>
       </div>  --->
         <!--- code for devise --->
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
+
         <!--- OAuth Devise --->
         <% if notice %>
           <p class="alert alert-success"><%= notice %></p>
@@ -35,8 +24,16 @@
         
         <%= yield %>
         
-        
-      
-    #</div>
+    </div>
+    
+    
+     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpugeZlPLmelFKDaXGm-aTu6ZB_SxAyn8&callback=initMap">
+</script>
+    
   </body>
 </html>
